@@ -8,7 +8,7 @@ if (OPENSSL_VERSION_NUMBER >= 0x30200000) die('skip For OpenSSL < 3.2');
 ?>
 --FILE--
 <?php
-$cert = "file://" . __DIR__ . "/cert.crt";
+$cert = "file://" . __DIR__ . "/crit.crt";
 
 $parsedCert = openssl_x509_parse($cert);
 var_dump($parsedCert === openssl_x509_parse(openssl_x509_read($cert)));
@@ -17,19 +17,19 @@ var_dump(openssl_x509_parse($cert, false));
 ?>
 --EXPECTF--
 bool(true)
-array(16) {
+array(17) {
   ["name"]=>
-  string(96) "/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/CN=Henrique do N. Angelo/emailAddress=hnangelo@php.net"
+  string(96) "/CN=Henrique do N. Angelo/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/emailAddress=hnangelo@php.net"
   ["subject"]=>
   array(5) {
+    ["CN"]=>
+    string(21) "Henrique do N. Angelo"
     ["C"]=>
     string(2) "BR"
     ["ST"]=>
     string(17) "Rio Grande do Sul"
     ["L"]=>
     string(12) "Porto Alegre"
-    ["CN"]=>
-    string(21) "Henrique do N. Angelo"
     ["emailAddress"]=>
     string(16) "hnangelo@php.net"
   }
@@ -37,31 +37,31 @@ array(16) {
   string(8) "%s"
   ["issuer"]=>
   array(5) {
+    ["CN"]=>
+    string(21) "Henrique do N. Angelo"
     ["C"]=>
     string(2) "BR"
     ["ST"]=>
     string(17) "Rio Grande do Sul"
     ["L"]=>
     string(12) "Porto Alegre"
-    ["CN"]=>
-    string(21) "Henrique do N. Angelo"
     ["emailAddress"]=>
     string(16) "hnangelo@php.net"
   }
   ["version"]=>
   int(2)
   ["serialNumber"]=>
-  string(20) "12593567369101004962"
+  string(42) "0x5EE94A5F3A71AF7DEC57FD8BC08D3ECA1A540198"
   ["serialNumberHex"]=>
-  string(16) "AEC556CC723750A2"
+  string(40) "5EE94A5F3A71AF7DEC57FD8BC08D3ECA1A540198"
   ["validFrom"]=>
-  string(13) "080630102843Z"
+  string(13) "251002180630Z"
   ["validTo"]=>
-  string(13) "080730102843Z"
+  string(13) "261002180630Z"
   ["validFrom_time_t"]=>
-  int(1214821723)
+  int(1759428390)
   ["validTo_time_t"]=>
-  int(1217413723)
+  int(1790964390)
   ["signatureTypeSN"]=>
   string(8) "RSA-SHA1"
   ["signatureTypeLN"]=>
@@ -157,26 +157,29 @@ array(16) {
     ["subjectKeyIdentifier"]=>
     string(59) "DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D"
     ["authorityKeyIdentifier"]=>
-    string(%d) "keyid:DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D
-DirName:/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/CN=Henrique do N. Angelo/emailAddress=hnangelo@php.net
-serial:AE:C5:56:CC:72:37:50:A2%A"
+    string(%d) "DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D"
     ["basicConstraints"]=>
     string(7) "CA:TRUE"
   }
+  ["criticalExtensions"]=>
+  array(1) {
+    [0]=>
+    string(16) "basicConstraints"
+  }
 }
-array(16) {
+array(17) {
   ["name"]=>
-  string(96) "/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/CN=Henrique do N. Angelo/emailAddress=hnangelo@php.net"
+  string(96) "/CN=Henrique do N. Angelo/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/emailAddress=hnangelo@php.net"
   ["subject"]=>
   array(5) {
+    ["commonName"]=>
+    string(21) "Henrique do N. Angelo"
     ["countryName"]=>
     string(2) "BR"
     ["stateOrProvinceName"]=>
     string(17) "Rio Grande do Sul"
     ["localityName"]=>
     string(12) "Porto Alegre"
-    ["commonName"]=>
-    string(21) "Henrique do N. Angelo"
     ["emailAddress"]=>
     string(16) "hnangelo@php.net"
   }
@@ -184,31 +187,31 @@ array(16) {
   string(8) "%s"
   ["issuer"]=>
   array(5) {
+    ["commonName"]=>
+    string(21) "Henrique do N. Angelo"
     ["countryName"]=>
     string(2) "BR"
     ["stateOrProvinceName"]=>
     string(17) "Rio Grande do Sul"
     ["localityName"]=>
     string(12) "Porto Alegre"
-    ["commonName"]=>
-    string(21) "Henrique do N. Angelo"
     ["emailAddress"]=>
     string(16) "hnangelo@php.net"
   }
   ["version"]=>
   int(2)
   ["serialNumber"]=>
-  string(20) "12593567369101004962"
+  string(42) "0x5EE94A5F3A71AF7DEC57FD8BC08D3ECA1A540198"
   ["serialNumberHex"]=>
-  string(16) "AEC556CC723750A2"
+  string(40) "5EE94A5F3A71AF7DEC57FD8BC08D3ECA1A540198"
   ["validFrom"]=>
-  string(13) "080630102843Z"
+  string(13) "251002180630Z"
   ["validTo"]=>
-  string(13) "080730102843Z"
+  string(13) "261002180630Z"
   ["validFrom_time_t"]=>
-  int(1214821723)
+  int(1759428390)
   ["validTo_time_t"]=>
-  int(1217413723)
+  int(1790964390)
   ["signatureTypeSN"]=>
   string(8) "RSA-SHA1"
   ["signatureTypeLN"]=>
@@ -304,10 +307,13 @@ array(16) {
     ["subjectKeyIdentifier"]=>
     string(59) "DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D"
     ["authorityKeyIdentifier"]=>
-    string(%d) "keyid:DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D
-DirName:/C=BR/ST=Rio Grande do Sul/L=Porto Alegre/CN=Henrique do N. Angelo/emailAddress=hnangelo@php.net
-serial:AE:C5:56:CC:72:37:50:A2%A"
+    string(%d) "DB:7E:40:72:BD:5C:35:85:EC:29:29:81:12:E8:62:68:6A:B7:3F:7D"
     ["basicConstraints"]=>
     string(7) "CA:TRUE"
+  }
+  ["criticalExtensions"]=>
+  array(1) {
+    [0]=>
+    string(16) "basicConstraints"
   }
 }
